# invoice_finetuned

./: .env.example  .gitignore  README.md  model_train.ipynb  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
configs/: lora_config.yaml  model_config.yaml  vllm_config.yaml
docker/: Dockerfile  docker-compose.yml
receipt_api/: main.py
reports/: eval_test.md
scripts/: demo_cpu_concurrency.py  demo_offline_api.py  demo_vllm_client.py  download_data.sh  merge_lora.py  preprocess_data.py
src/api/: async_processor.py  main.py  routes.py  schemas.py
src/data/: __init__.py  augmentation.py  dataset.py
src/db/: __init__.py  connection.py  models.py
src/eval/: __init__.py  benchmark.py  metrics.py  run_eval.py
src/model/: __init__.py  qwen_model.py  train.py
tests/: conftest.py  test_api.py  test_eval.py  test_model.py
ui_app/: app.py
