[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-ocr"
version = "1.0.0"
description = "Production-grade receipt OCR using Qwen2.5-VL-7B + LoRA fine-tuning"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# ── ruff (linter) ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
exclude = ["notebooks/"]

[tool.ruff.isort]
known-first-party = ["src"]
